<resources>
    <string name="appName">Inspiration Rewards</string>
    <string name="usernamePrompt">Username</string>
    <string name="passwordPrompt">Password</string>
    <string name="loginButton">LOGIN</string>
    <string name="rememberCredentials">Remember my credentials</string>
    <string name="newaccountcreateview">Tap here to create new account</string>
    <string name="prefFile">MY_PREF_FILE</string>
    <string name="userPreferences">U_PREF</string>
    <string name="passwordPreferences">PASS_PREF</string>
    <string name="checkPreferences">CHECK_PREF</string>
    <string name="createUsernamePrompt">Select Username</string>
    <string name="createPasswordPrompt">Select Password</string>
    <string name="checkAdminPrompt">Administrator User</string>
    <string name="firstNamePrompt">Enter First Name</string>
    <string name="lastNamePrompt">Enter Last Name</string>
    <string name="departmentPrompt">Select Department</string>
    <string name="positionPrompt">Enter your position</string>
    <string name="storyPrompt">Tell us something about yourself!</string>
    <string name="createDept_lbl">Department:</string>
    <string name="positionView">Position:</string>
    <string name="storyView">Your Story:</string>
    <string name="pointsView">Points Awarded:</string>
    <string name="departmentView">Department:</string>
    <string name="userProfilePosition_view">Position:</string>
    <string name="userProfilePtAva_view">Points to Award:</string>
    <string name="rewardProfilePts_view">Reward points to send:</string>
    <string name="rewardProfileComment_view">Comment:</string>

</resources>
